[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/death_menu.gd" type="Script" id=1]

[node name="DeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.439216, 0, 0, 0.321569 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -48.0
margin_right = 100.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="CanvasLayer/Background/VBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "You died!"
align = 1

[node name="Retry" type="Button" parent="CanvasLayer/Background/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 38.0
text = "Try again!"

[node name="Menu" type="Button" parent="CanvasLayer/Background/VBoxContainer"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 62.0
text = "Return to main menu"

[node name="Quit" type="Button" parent="CanvasLayer/Background/VBoxContainer"]
margin_top = 66.0
margin_right = 200.0
margin_bottom = 86.0
text = "Quit game"

[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Background/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
